# sglang

.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh
protos/: sglang_engine.proto
python/sglang/srt/: environ.py  server_args.py
python/sglang/srt/entrypoints/: grpc_server.py
python/sglang/srt/entrypoints/grpc_generated/: sglang_engine_pb2.py  sglang_engine_pb2.pyi  sglang_engine_pb2_grpc.py
python/sglang/srt/layers/quantization/: __init__.py
python/sglang/srt/model_loader/: utils.py
python/sglang/srt/models/: qwen2_vl.py
sgl-router/: Cargo.toml  build.rs  service-discovery.md
sgl-router/src/: k8s_discovery.rs  lib.rs  router.rs  server.rs
sgl-router/src/grpc_generated/: sglang.engine.v1.rs
sgl-router/src/routers/openai/: streaming.rs
