[package]
name = "sglang_router_rs"
version = "0.0.0"
edition = "2021"

[lib]
name = "sglang_router_rs"
# Pure Rust library: Just omit crate-type (defaults to rlib)
# Python/C binding + Rust library: Use ["cdylib", "rlib"]
crate-type = ["cdylib", "rlib"]

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4", features = ["derive"] }
bytes = "1.8.0"
rand = "0.8.5"
reqwest = { version = "0.12.8", features = ["stream", "blocking"] }
futures-util = "0.3"
serde_json = "1.0"
pyo3 = { version = "0.22.5", features = ["extension-module"] }
dashmap = "6.1.0"
http = "1.1.0"
env_logger = "0.11.5"
log = "0.4.22"
chrono = "0.4.38"
tokio = "1.42.0"

# Kubernetes dependencies (Optional)
kube = { version = "0.87.1", features = ["runtime", "derive"], optional = true }
k8s-openapi = { version = "0.20.0", features = ["v1_26"], optional = true }
futures = { version = "0.3", optional = true }
thiserror = { version = "1.0", optional = true }
anyhow = { version = "1.0", optional = true }

[features]
default = []
k8s = ["dep:kube", "dep:k8s-openapi", "dep:futures", "dep:thiserror", "dep:anyhow"]

[profile.release]
lto = "thin"
codegen-units = 1
